css/app.css
/* ... */
.routeResponseDisplay
{
    display: block;
    max-width: 450px;
    position: relative;
    z-index: 400;
    margin-top: 15px;
}

.routeResponseDisplay DIV.selected {
    background: #ff9600;
    color: black;
    max-width: 50%;
}
.routeResponseDisplay DIV {
    float: left;
    cursor: pointer;
    background: #444f55;
    padding: 5px 10px;
    font-family: arial;
    font-weight: bold;
    opacity: 0.9;
    color: white;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    max-width: 25%;

}

.selectedRouteDisplay {
    position: relative;
    background: white;
    opacity: 0.9;
    font-size: 11px;
    max-height: 400px;
    overflow: scroll;
    display: inline-block;
    max-width: 450px;
    width: 100%;
}
.selectedRouteDisplay DIV
{
    padding: 4px;
}

.selectedRouteDisplay DIV DIV {
    float: left;
    margin: 0 10px;
}

.routestats {
    padding-left: 15px;
}
.routestats IMG {
    margin-left: 10px;
}

.routestats .nullutslippszone{
    background-color: lightpink; margin-top: 10px; padding: 3px; border-radius: 5px;font-weight: bold;float: none;
}
.routestats .bomstasjonnorebate {
    background-color: lightpink; margin-top: 10px; padding: 3px; border-radius: 5px;font-weight: bold;float: none;;
}

.signpost {
    font-weight: bold;
    padding: 1px 3px !important;
    border-radius: 5px;
    border: 1px solid gray;
}

.signpost.signpost-E {
    background: green;
    color: white;
}
.signpost.signpost-R {
    background: #ff9600;
    color: black;
}
.signpost.signpost-F {
    background: #ff9600;
    color: black;
}

.signpost.signpost-K {
    background: white;
    color: black;
}
.signpost.signpost-P {
    background: white;
    color: black;
}
.signpost.signpost-S {
    background: white;
    color: black;
}


.modal-custom-lg.modal-dialog {
    width: 90%;
    height: 90%;
    max-width: 90% !important;
}

.modal-content IFRAME {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

.modal-custom-lg .modal-content {
    width: 100%;
    height: 100%;
}

#map {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0px;
    z-index: 0;
}


.settingspane {
    position: relative;
    display: inline-block;
    width: 50%;
    padding-left: 20px;
    vertical-align: top;
    font-size: 12px;
}

.react-tabs__tab-panel {
    background: white;
    height: 115px;
    padding: 10px;
    overflow: auto;
}

.react-tabs__tab-list {
    margin: 0 !important;
}
.react-tabs__tab {
    background: gray !important;
    border: 1px solid black !important;
}
.react-tabs__tab--selected {
    background: #ff9600 !important;
}

.searchbar {
    position: relative;
    text-align: center;
    z-index: 400;

}

.settingspane {visibility: collapse;display: none;}

.settingspane1 input {
    background-color: #f5f5f5;
    cursor: text;
    min-height: 15px;
    overflow: auto;
    padding: 0px 0px 0px 5px;
    border: 0;
    font-size: 12px;
    font-weight: bold;
    color: #444f55;
    border-radius: 4px;
    -moz-border-radius: 4px;
    width: 30px;
}

.settingrow1 span {
    display: inline-block;
    
}

.settingrow1 {
    margin: 2px 0;
}

.settingrow1.longrow {
    display: table;
    width: 100%;
}

.settingrow1.longrow input {
    display: table-cell;
    width: 100%;
}

.settingrow1.longrow label {
    display: table-cell;
    width: 70px;
}

